--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.data.mongodb.auto-index-creation=true
 logging.level.com.journal.journalApp=DEBUG
 #spring.data.mongodb.username=user01
 #spring.data.mongodb.password=user01PW
+
+weather.api.key=4b53a35d8110d64e1e49932f42491a5f
