--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   redis:
-    host: localhost
-    port: 6379
+    uri: redis://xxxxxxxxx
   mail:
     host: smtp.gmail.com
     port: 587
